# IntelligentsecurityAi

./: CMakeLists.txt  README.md
include/: Struct_cv.h  crash_exception.h  watchai.h
include/asface/: arcsoft_face_sdk.h  merror.h
include/enjoy/: enjoy_all.h
include/enjoy/kit/: fileutil.hpp
include/ffmpeg/libavutil/: ffversion.h
libs/: SeetaFaceDetector600.lib  SeetaFaceLandmarker600.lib  SeetaFaceRecognizer610.lib  hv.lib
src/: ArcFace.cpp  ArcFace.h  CMakeLists.txt  CameraHandle.cpp  CameraHandle.h  CameraPull.cpp  CameraPull.h  CameraPush.cpp  CameraPush.h  Controller.cpp  Controller.h  EventCenter.cpp  EventCenter.h  PictureHandle.cpp  PictureHandle.h  SeetaFace.cpp  SeetaFace.h  SnapHandle.cpp  SnapHandle.h  YoloV5.cpp  YoloV5.h  config.conf  config.cpp  config.h  main.cpp  watchai.cpp
test/: test.cpp
