cmake_minimum_required(VERSION 3.21)
set(APPNAME watchai)
project(${APPNAME})
set(CMAKE_CXX_STANDARD 17)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(Torch_DIR D:\\SDK_CPP\\libtorch-win-shared-with-deps-1.10.1+cu102\\libtorch\\share\\cmake\\Torch)
set(OpenCV_DIR D:\\SDK_CPP\\opencv\\newbuild\\install)
set(FFMPEG ./include/ffmpeg)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Zi")
set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /DEBUG /OPT:REF /OPT:ICF")
include_directories(./include)
include_directories(${FFMPEG})
link_directories(libs)
add_subdirectory(./src)
add_subdirectory(./test)
add_subdirectory(dependencies/fmt EXCLUDE_FROM_ALL)

